feat: 신규 대회 생성 로직 추가

--- a/packages/styles/colors.css
+++ b/packages/styles/colors.css
@@ -18,8 +18,9 @@
     --hcc-colors-blue-600: #007AFF;
 
     --hcc-colors-red-200: #FFF2F1;
-    --hcc-colors-red-500: #F87904;
     --hcc-colors-red-600: #FC5555;
+
+    --hcc-colors-orange-600: #F87904;
 
     --hcc-colors-green-600: #1ADA3B;
 
