--- a/packages/ui/src/button/Button.module.css
+++ b/packages/ui/src/button/Button.module.css
@@ -8,6 +8,7 @@
   height: var(--hcc-button-height);
   color: var(--hcc-button-font-color);
   font-size: var(--hcc-button-font-size);
+  font-weight: var(--hcc-button-font-weight);
   border: var(--hcc-button-border);
   border-radius: var(--hcc-button-border-radius);
   background-color: var(--hcc-button-bg-color);
@@ -15,6 +16,7 @@
   --hcc-button-height: inherit;
   --hcc-button-font-color: inherit;
   --hcc-button-font-size: inherit;
+  --hcc-button-font-weight: inherit;
   --hcc-button-border: inherit;
   --hcc-button-border-radius: inherit;
   --hcc-button-bg-color: inherit;
