--- a/packages/ui/src/input/Input.module.css
+++ b/packages/ui/src/input/Input.module.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   text-align: start;
+  overflow: hidden;
 
   height: var(--hcc-input-height);
   border-radius: var(--hcc-input-border-radius);
@@ -20,12 +21,12 @@
 }
 
 .input {
-  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   text-align: inherit;
+  padding-top: var(--hcc-input-padding-top);
 
   color: inherit;
   outline: 1px solid transparent;
@@ -38,22 +39,11 @@
   line-height: var(--hcc-input-line-height);
 }
 
-.wrapper:not([data-size="lg"]):not([data-size="xl"]) .input {
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.wrapper[data-size="lg"] .input,
-.wrapper[data-size="xl"] .input {
-  top: 0;
-  padding-top: var(--hcc-input-padding-top);
-}
-
-.wrapper:not([data-size="lg"]):not([data-size="xl"]) .input::placeholder {
+.input::placeholder {
   color: var(--hcc-input-placeholder-color);
 }
 
-.input::placeholder {
+.wrapper:has(.label) .input::placeholder {
   color: transparent;
 }
 
