--- a/packages/ui/src/button/Button.module.css
+++ b/packages/ui/src/button/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+  position: relative;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -37,4 +38,20 @@
   background-color: var(--hcc-button-bg-hover-color);
 
   --hcc-button-bg-hover-color: inherit;
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
