--- a/packages/style/css/theme.css
+++ b/packages/style/css/theme.css
@@ -1,7 +1,29 @@
 :root {
-  --color-white: #FFFFFF;
-  --color-black: #000000;
   --color-transparent: transparent;
+
+  --color-white: #FFFFFF;
+  --color-white-alpha-5: rgba(255, 255, 255, 0.05);
+  --color-white-alpha-10: rgba(255, 255, 255, 0.1);
+  --color-white-alpha-20: rgba(255, 255, 255, 0.2);
+  --color-white-alpha-30: rgba(255, 255, 255, 0.3);
+  --color-white-alpha-40: rgba(255, 255, 255, 0.4);
+  --color-white-alpha-50: rgba(255, 255, 255, 0.5);
+  --color-white-alpha-60: rgba(255, 255, 255, 0.6);
+  --color-white-alpha-70: rgba(255, 255, 255, 0.7);
+  --color-white-alpha-80: rgba(255, 255, 255, 0.8);
+  --color-white-alpha-90: rgba(255, 255, 255, 0.9);
+
+  --color-black: #000000;
+  --color-black-alpha-5: rgba(0, 0, 0, 0.05);
+  --color-black-alpha-10: rgba(0, 0, 0, 0.1);
+  --color-black-alpha-20: rgba(0, 0, 0, 0.2);
+  --color-black-alpha-30: rgba(0, 0, 0, 0.3);
+  --color-black-alpha-40: rgba(0, 0, 0, 0.4);
+  --color-black-alpha-50: rgba(0, 0, 0, 0.5);
+  --color-black-alpha-60: rgba(0, 0, 0, 0.6);
+  --color-black-alpha-70: rgba(0, 0, 0, 0.7);
+  --color-black-alpha-80: rgba(0, 0, 0, 0.8);
+  --color-black-alpha-90: rgba(0, 0, 0, 0.9);
 
   --color-primary-50: #F8FBFF;
   --color-primary-100: #F2F8FF;
@@ -39,6 +61,11 @@
   --color-neutral-900: oklch(20.5% 0 0);
 
   --color-toast: #374553;
+
+  --z-index-above: 1;
+  --z-index-header: 10;
+  --z-index-overlay: 1000;
+  --z-index-modal: 1001;
 }
 
 @theme {
@@ -46,8 +73,10 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 1024px;
 
-  --z-index-above: 1;
-  --z-index-header: 10;
+  --z-index-above: var(--z-index-above);
+  --z-index-header: var(--z-index-header);
+  --z-index-overlay: var(--z-index-overlay);
+  --z-index-modal: var(--z-index-modal);
 
   --app-max-width: 560px;
 }
